--- a/index.html
+++ b/index.html
@@ -4,37 +4,69 @@
     <meta charset="UTF-8">
     <title>Vaccines</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/fontawesome5/css/fontawesome.min.css">
+    <link rel="stylesheet" href="./assets/fontawesome5/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <header>
+<div class="container">
     <nav>
         <div class="row row-menu">
-              <div class="col-sm-6">
-                  <img src="./assets/img/Vector Smart Object.png" alt="logo" style="color: white;">
-              </div>
                <div class="col-sm-6">
-               <div class="row">
-               <div class="col-sm-4">
-                   
-                <h5 style="color: white;">MEMBERS AREA</h5> 
+                  <img src="./assets/img/Vector Smart Object.png" alt="logo" style="color: white;padding: 5%;">
+               </div>
+               <div class="col-sm-6">
+                  <div class="row">
+                    <div class="col-sm-4 col-sm-4-icon" style="padding: 5%;">
+                       <h6 style="color: white;">MEMBERS AREA</h6> 
+                       <i class="fas fa-user-friends" style="float: right;color: white; margin-left: 9%;margin-top:-1.5%;position: absolute;"></i>
+                    </div>
+                    <div class="col-sm-4"style="padding: 5%;">
+                        <h6 style="color: white;">SEARCH</h6> 
+                        <i class="fas fa-search"style="float: right;color: white; margin-left: 5%;margin-top:-1.5%;position: absolute;"></i>
+                    </div>
+                    <div class="col-sm-4"style="padding: 5%;">
+                        <h6 style="color: white;">MENU</h6> 
+                        <a><i class="fas fa-bars"style="float: left; color: white; margin-left: 4%;margin-top:-1.5%;position: absolute;"></i></a>
+                    </div>
+                   </div>
                 </div>
-                <div class="col-sm-4">
-                    <i class="fas fa-search"></i>
-                    <h5 style="color: white;">SEARCH</h5> 
-                    </div>
-                    <div class="col-sm-4">
-                        <h5 style="color: white;">MENU</h5> 
-                    </div>
-                        </div>
-            </div>
-            </div>
-
-            </div>
         </div>
+        <h2 style="text-align: center;color: white;margin-top: -25%;"><b>Search result</b></h2>
+        <p style="text-align: center;color: white;font-size:larger;">Ehcepteur sint occaecat cupidatat non<br> 
+            proident, sunt in culpa qui officia deserunt
+        </p>
+        <form id="form" style="text-align: center; padding: 3%;">
+            <input type="search" id="query" name="q" placeholder="Keyword..."style="text-align:left">
+        </form>
     </nav>
-
+</div>
 </header>
 <body>
+    <div class="container">
+        <section section-contenttype>
+             <div class="row" style="margin-top: 12%;text-align: center;margin-left: 5%;padding: 1%;background-color: thistle;margin-right: 5%;">
+                  <div class="col-sm-2">
+                      <p>CONTENT TYPE</p>
+                  </div>
+                  <div class="col-sm-2">
+                    <p>CONTENT TYPE</p>
+                </div>
+                <div class="col-sm-2">
+                    <p>CONTENT TYPE</p>
+                </div>
+                <div class="col-sm-2">
+                    <p>CONTENT TYPE</p>
+                </div>
+                <div class="col-sm-2">
+                    <p>CONTENT TYPE</p>
+                </div>
+            </div>
+        </section>
+        <section section-titleofpage>
+            <div class="row">
+                 <h6> 04 FEB 2020 </h6><h7>-TYPE OF CONTENT</h7>
+            </div>
+        </section>
+    </div>
 
 </body>
