--- a/index.html
+++ b/index.html
@@ -1,175 +1,247 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
-
-<head>
-    <meta charset="UTF-8">
+<html
+  lang="en"
+  xmlns="http://www.w3.org/1999/html"
+  xmlns="http://www.w3.org/1999/html"
+>
+  <head>
+    <meta charset="UTF-8" />
     <title>Vaccines</title>
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/fontawesome5/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/main.css">
-</head>
-<header>
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/fontawesome5/css/all.min.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+  </head>
+  <header>
     <div class="container-fluid">
-        <nav>
-            <div class="row row-menu">
-                <div class="col-sm-6">
-                    <img src="./assets/img/Vector Smart Object.png" alt="logo" style="color: white;padding: 5%;">
-                </div>
-                <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-4 col-sm-4-icon" style="padding: 5%;">
-                            <a href="#">
-                                <h6 style="color: white;">MEMBERS AREA</h6>
-                                <i class="fas fa-user-friends"
-                                    style="float: right;color: white; margin-left: 9%;margin-top:-1.5%;position: absolute;"></i>
-                            </a>
-                        </div>
-                        <div class="col-sm-4" style="padding: 5%;">
-                            <a href="#">
-                                <h6 style="color: white;">SEARCH</h6>
-                                <i class="fas fa-search"
-                                    style="float: right;color: white; margin-left: 5%;margin-top:-1.5%;position: absolute;"></i>
-                            </a>
-                        </div>
-                        <div class="col-sm-4" style="padding: 5%;">
-                            <a href="#">
-                                <h6 style="color: white;">MENU</h6>
-                                <i class="fas fa-bars"
-                                    style="float: left; color: white; margin-left: 4%;margin-top:-1.5%;position: absolute;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div style="text-align: center;color: white;">
-                    <h2><b>Search result</b></h2>
-                    <p style="font-size:larger;">Ehcepteur sint occaecat cupidatat non<br>
-                        proident, sunt in culpa qui officia deserunt gfdgfdgdfg gfdgfd gffd Ehcepteur sint occaecat
-                        cupidatat non<br>
-                        proident, sunt in culpa qui officia deserunt gfdgfdgdfg gfdgfd gffd
-                    </p>
-                    <form id="form" style="text-align: center; padding: 3%;">
-                        <input type="search" id="query" name="q" placeholder="Keyword..."
-                            style="text-align:left;color:white;font-size:25px;">
-                        <i class="fas fa-search" style=";color: white;margin-right:-2%"></i>
-                    </form>
-                </div>
-            </div>
-
-        </nav>
-    </div>
-</header>
-
-<body>
-    <div class="container-fluid"style="pading:20%">
-        <div class="container">
-        <section section-contenttype>
-            <div class="row" style="margin-top: 5%;text-align: center;">
-                <div class="col-sm-12">
-                    <button type="button" class="btn btn-outline-success"><b style="color: gray;">CONTENT
-                            TYPE</b></button>
-                    <button type="button" class="btn btn-outline-success"><b style="color: gray;">CONTENT
-                            TYPE</b></button>
-                    <button type="button" class="btn btn-outline-success"><b style="color: gray;">CONTENT
-                            TYPE</b></button>
-                    <button type="button" class="btn btn-outline-success"><b style="color: gray;">CONTENT
-                            TYPE</b></button>
-                    <button type="button" class="btn btn-outline-success"><b style="color: gray;">CONTENT
-                            TYPE</b></button>
-                </div>
-            </div>
-       </section>
-       <section class="section-titleofpage">
+      <nav>
+        <div class="row row-menu">
+          <div class="col-sm-6">
+            <img
+              src="./assets/img/Vector Smart Object.png"
+              alt="logo"
+              style="color: white; padding: 5%"
+            />
+          </div>
+          <div class="col-sm-6">
             <div class="row">
-                <div class="col-sm-12">
-                    <h6> 04 FEB 2020 -<span >TYPE OF CONTENT</span></h6>
-                    <h3>Title of the page</h3>
-                    <p>
-                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-                       Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-                       Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-                    </p>
-                </div>
+              <div class="col-sm-4 col-sm-4-icon" style="padding: 5%">
+                <a href="#">
+                  <h6 style="color: white">MEMBERS AREA</h6>
+                  <i
+                    class="fas fa-user-friends"
+                    style="
+                      float: right;
+                      color: white;
+                      margin-left: 9%;
+                      margin-top: -1.5%;
+                      position: absolute;
+                    "
+                  ></i>
+                </a>
+              </div>
+              <div class="col-sm-4" style="padding: 5%">
+                <a href="#">
+                  <h6 style="color: white">SEARCH</h6>
+                  <i
+                    class="fas fa-search"
+                    style="
+                      float: right;
+                      color: white;
+                      margin-left: 5%;
+                      margin-top: -1.5%;
+                      position: absolute;
+                    "
+                  ></i>
+                </a>
+              </div>
+              <div class="col-sm-4" style="padding: 5%">
+                <a href="#">
+                  <h6 style="color: white">MENU</h6>
+                  <i
+                    class="fas fa-bars"
+                    style="
+                      float: left;
+                      color: white;
+                      margin-left: 4%;
+                      margin-top: -1.5%;
+                      position: absolute;
+                    "
+                  ></i>
+                </a>
+              </div>
             </div>
-       </section>
-       <section class="section-titleofpage">
+          </div>
+
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <body>
+    <div class="container-fluid container-fluid-heder">
         <div class="row">
             <div class="col-sm-12">
-                <h6> 04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
-                <h3>Title of the page</h3>
-                <p>
-                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-                   Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-                   Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-                </p>
+            <h2><b>Search result</b></h2>
+            <p style="font-size: larger">
+              Ehcepteur sint occaecat cupidatat non<br />
+              proident, sunt in culpa qui officia deserunt gfdgfdgdfg gfdgfd
+              gffd Ehcepteur sint occaecat cupidatat non<br />
+              proident, sunt in culpa qui officia deserunt gfdgfdgdfg gfdgfd
+              gffd
+            </p>
+            <form id="form" style="text-align: center; padding: 3%">
+              <input
+                type="search"
+                id="query"
+                name="q"
+                placeholder="Keyword..."
+                style="text-align: left; color: white; font-size: 25px"
+              />
+              <i
+                class="fas fa-search"
+                style="color: white; margin-right: -2%"
+              ></i>
             </div>
         </div>
-   </section>
-   <section class="section-titleofpage">
-    <div class="row">
-        <div class="col-sm-12">
-            <h6> 04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
-            <h3>Title of the page</h3>
-            <p>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-               et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-            </p>
-        </div>
-    </div>
-</section>
-<section class="section-titleofpage">
-    <div class="row">
-        <div class="col-sm-12">
-            <h6> 04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
-            <h3>Title of the page</h3>
-            <p>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-               et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-            </p>
-        </div>
-    </div>
-</section>
-<section class="section-titleofpage">
-    <div class="row">
-        <div class="col-sm-12">
-            <h6> 04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
-            <h3>Title of the page</h3>
-            <p>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-               et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-            </p>
-        </div>
-    </div>
-</section>
-<section class="section-titleofpage">
-    <div class="row">
-        <div class="col-sm-12">
-            <h6> 04 FEB 2020 -<span style="color: darkblue;">TYPE OF CONTENT</span></h6>
-            <h3>Title of the page</h3>
-            <p>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-               et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-               Ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
-            </p>
-        </div>
-    </div>
-</section>
-       <section section-contenttype>
-        <div class="row" style="margin-top: 5%;text-align: center;">
-            <div class="col-sm-12">
-                <button type="button" class="btn btn-outline-success";><b style="color: gray;">LOAD MORE</b></button>
-            </div>
-        </div>
-   </section>
-    </div>
-    
 
-</body>
+    </div>
+    <div class="container">
+      <section section-contenttype>
+        <div class="row" style="margin-top: 5%; text-align: center">
+          <div class="col-sm-12">
+            <button type="button" class="btn btn-outline-success">
+              <b style="color: gray">CONTENT TYPE</b>
+            </button>
+            <button type="button" class="btn btn-outline-success">
+              <b style="color: gray">CONTENT TYPE</b>
+            </button>
+            <button type="button" class="btn btn-outline-success">
+              <b style="color: gray">CONTENT TYPE</b>
+            </button>
+            <button type="button" class="btn btn-outline-success">
+              <b style="color: gray">CONTENT TYPE</b>
+            </button>
+            <button type="button" class="btn btn-outline-success">
+              <b style="color: gray">CONTENT TYPE</b>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="section-titleofpage">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6>04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
+            <h3>Title of the page</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip. Ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat. Ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-titleofpage">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6>04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
+            <h3>Title of the page</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip. Ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat. Ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-titleofpage">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6>04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
+            <h3>Title of the page</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip. Ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat. Ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-titleofpage">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6>04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
+            <h3>Title of the page</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip. Ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat. Ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-titleofpage">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6>04 FEB 2020 -<span>TYPE OF CONTENT</span></h6>
+            <h3>Title of the page</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip. Ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat. Ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-titleofpage">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6>
+              04 FEB 2020 -<span style="color: darkblue">TYPE OF CONTENT</span>
+            </h6>
+            <h3>Title of the page</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip. Ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat. Ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section section-contenttype>
+        <div class="row" style="margin-top: 5%; text-align: center">
+          <div class="col-sm-12">
+            <button type="button" class="btn btn-outline-success" ;>
+              <b style="color: gray">LOAD MORE</b>
+            </button>
+          </div>
+        </div>
+      </section>
+    </div>
+  </body>
+</html>
