--- a/index.html
+++ b/index.html
@@ -248,5 +248,24 @@
 
     </section>
 </body>
+<footer>
+    <div class="row row-footer" style="padding: 40px;text-align: center;">
+        <div class="col-sm-4">
+             <img src="./assets/img/Vector Smart Object_w.svg" alt="logo" style="margin-top: 25px;margin-left: 25px;"/>
+        </div>
+        <div class="col-sm-4" style="color: white;">
+            <p>@Vaccines Europe-a specialised group<br>
+            of EFIPIA-all rights reserved</p>
+       </div>
+       <div class="col-sm-4" style="color: white;text-align:center;margin-top: 50px;">
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook-square" style="margin-left: 50px;"></i>
+        <i class="fab fa-youtube" style="margin-left: 50px;"></i>
+       
+      </div>
+
+    </row>
+
+</footer>
 
 </html>
