--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <header>
-    <div class="container-fluid">
-        <nav>
+    <div class="container-fluid container-fluid-menu">      
             <div class="row row-menu">
                 <div class="col-sm-6 col-sm-6-logo">
                     <img src="./assets/img/Vector Smart Object_w.svg" alt="logo">
@@ -19,29 +18,28 @@
                     <div class="row ">
                         <div class="col-sm-4 col-sm-4-members-area">                           
                              <a href="#">
-                                <h6>MEMBERS AREA
-                                    <i class="fas fa-user-friends" ></i>
+                                <h6 style="margin-left: 150px;">MEMBERS AREA
+                                    <i class="fas fa-user-friends"></i>
                                 </h6>
                             </a>
                         </div>
                         <div class="col-sm-4 col-sm-4-search">
                             <a href="#">
-                                <h6>SEARCH
+                                <h6 style="margin-left: 150px;">SEARCH
                                      <i class="fas fa-search"></i>
                                 </h6>
                             </a>
                         </div>
                         <div class="col-sm-4 col-sm-4-menu">
                             <a href="#">
-                                <h6>MENU
+                                <h6 style="margin-left: 150px;">MENU
                                      <i class="fas fa-bars" ></i>
                                 </h6>
                             </a>
                         </div>
                     </div>
                 </div>
-            </div>
-         </nav>
+            </div>        
     </div>
 </header>
 
