--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section section-contenttype>
             <div class="row row-contenttype">
                 <div class="col-sm-12 col-sm-12-button">
-                    <button type="button" class="btn btn-outline-success btnbtn-outline-success-first">
+                    <button type="button" class="btn btn-outline-success blocktnbtn-outline-success-first">
                         <b>CONTENT TYPE</b>
                     </button>
                     <button type="button" class="btn btn-outline-success btnbtn-outline-success-second">
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-sm-12 col-sm-12-title-of-content">
                     <h6>04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span></h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-sm-12 col-sm-12-title-of-content">
                     <h6>04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span></h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-sm-12 col-sm-12-title-of-content">
                     <h6>04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span></h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="col-sm-12 col-sm-12-title-of-content">
                     <h6>04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span></h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-sm-12 col-sm-12-title-of-content">
                     <h6>04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span></h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -174,7 +174,7 @@
                     <h6>
                         04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span>
                     </h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -193,7 +193,7 @@
                     <h6>
                         04 FEB 2020 -<span><b>TYPE OF CONTENT</b></span>
                     </h6>
-                    <h3>Title of the page</h3>
+                    <h3><b>Title of the page</b></h3>
                     <p style=" border-bottom-color:white">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -219,11 +219,11 @@
     </div>
     <div class="row row-efpia">
         <div class="col-sm-6">
-            <div class="row justify-content-start">
+            <div class="row row-justify-content-start">
             <div class="col-md-3">
                 <div class="row">
                <a><img src="./assets/img/members area.svg"> <h6>MEMBERS AREA</h6></a>
-            </div>
+               </div>
             </div>
             <div class="col-md-3 col-md-3-depr" >
                 <h6>DESCLIMER</h6>
